# MultiAgentPathFinding

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
Examples/: example.xml  example_log.xml
Src/: CMakeLists.txt  agents.h  agents_array.cpp  agents_array.h  astar.cpp  astar.h  config.cpp  config.h  environmentoptions.cpp  environmentoptions.h  gl_const.h  ilogger.h  main.cpp  main_mapf.cpp  map.cpp  map.h  mapf_interface.h  mapf_main.cpp  mission.cpp  mission.h  node.h  nodes.cpp  nodes.h  scenaries.cpp  scenaries.h  scenarios.cpp  scenarios.h  search.cpp  search.h  searchresult.h  tasker.cpp  tasker.h  xml_map.cpp  xml_map.h  xmllogger.cpp  xmllogger.h
Src/mapf/: astar3d.cpp  astar3d.h  checker.cpp  checker.h  ma_star.cpp  ma_star.h  mapf_interface.h  reservation.h  whca.cpp  whca.h
TestData/: 0_test_log.xml  5_test_log.xml
TestData/MAPFtests/: BerlinConfig.xml  test.map  test.scen
Tests/: CMakeLists.txt  general_test.cpp  mapf_test.cpp  pp_test.cpp  testbench.cpp
UnrealVisualisation/: PathVisualiser.sln  PathVisualiser.uproject
UnrealVisualisation/Binaries/Win64/: PathVisualiserEditor.target  UE4Editor.modules
UnrealVisualisation/Config/: DefaultEngine.ini  DefaultGame.ini
UnrealVisualisation/Content/: Map.umap  Map_BuiltData.uasset
UnrealVisualisation/Saved/Backup/: Map_2020-12-05-12-56-36.umap  Map_2020-12-05-13-03-41.umap  Map_2020-12-05-13-18-04.umap  Map_BuiltData_2020-12-05-12-56-36.uasset  Map_BuiltData_2020-12-05-13-03-41.uasset  Map_BuiltData_2020-12-05-13-18-04.uasset
UnrealVisualisation/Saved/Config/Windows/: EditorPerProjectUserSettings.ini
UnrealVisualisation/Source/: PathVisualiser.Target.cs  PathVisualiserEditor.Target.cs
UnrealVisualisation/Source/PathVisualiser/: PathVisualiser.Build.cs  PathVisualiser.cpp  PathVisualiserGameModeBase.cpp  PathVisualiserGameModeBase.h
Visualisation/: Visualisation.uproject
Visualisation/Config/: DefaultEngine.ini  DefaultGame.ini
Visualisation/Content/: InteractiveRoom.umap  InteractiveRoom_BuiltData.uasset
Visualisation/Content/MapActors/: Grid.uasset  Grid_BP.uasset  SearchOptions.uasset
Visualisation/Source/: Visualisation.Target.cs  VisualisationEditor.Target.cs
Visualisation/Source/SearchAlgorithm/: SearchAlgorithm.Build.cs  SearchAlgorithm.cpp  Src  Src.lnk
Visualisation/Source/Visualisation/: Grid.cpp  Grid.h  Visualisation.Build.cs  Visualisation.cpp  VisualisationGameModeBase.cpp  VisualisationGameModeBase.h
